--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,23 @@
 	    <version>4.0.0-alpha-6</version> 
 	   <!-- <version>3.141.59</version> -->
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>7.3.0</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.6</version>
+	</dependency>
+	
+	
   
     <dependency>
       <groupId>junit</groupId>
